# zero_axum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221120160554_create_subscriptions_table.sql  20221212052835_create_subscriptions_token_table.sql  20221212155154_create_subscription_tokens.sql  20230312192740_seed_user.sql
scripts/: init.sh  init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
