[package]
name = "zero_axum"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero_axum"

[dependencies]
argon2 = { version = "0.4", features = ["std"] }
axum = "0.6"
hyper = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
] }
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tower-http = { version = "0.3", features = ["trace", "request-id"] }
secrecy = { version = "0.8", features = ["serde"] }
tower = "0.4"
serde-aux = "4.1"
unicode-segmentation = "1.10"
validator = "0.16"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1.0"
anyhow = "1.0.66"
base64 = "0.20"
sha3 = "0.10"


[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1"
claims = "0.7.1"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.15"
serde_json = "1.0.89"
linkify = "0.9.0"
